# alumnos

./: .gitignore  pyproject.back  pyproject.toml  scrapy.cfg
alumnos/: asgi.py  urls.py  wsgi.py
alumnos/settings/: __init__.py  common.py  develop.py
carreras/: models.py
cursado/: apps.py
guarani/: middlewares.py  pipelines.py  settings.py
guarani/items/: __init__.py  actividad.py  alumno.py  avance.py  certificado.py  estado.py  examen.py  propuesta.py  reinscripcion.py
guarani/spiders/: alumno.py  django.py  guarani.py
personas/: admin.py  models.py
personas/migrations/: 0001_initial.py
